--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,3 +8,8 @@ services:
       POSTGRES_PASSWORD: main
       POSTGRES_DB: main
     ports: [5432]
+    volumes:
+    - postgres_volume:/var/lib/postgresql/data
+
+volumes:
+  postgres_volume:
